// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage Snapshot do componente após o carregamento da API e antes de iniciar o jogo. 1`] = `
<DocumentFragment>
  .c0 {
  height: 100px;
  margin: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  color: white;
  background-color: darkcyan;
  font-size: 1.5em;
  margin: 1em;
  padding: 0.25em 1em;
  border: 2px solid green;
  border-radius: 3px;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  row-gap: 20px;
  -webkit-column-gap: 5px;
  column-gap: 5px;
  margin-bottom: 20px;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <button
        class="c1"
      >
        Iniciar o Jogo
      </button>
    </div>
    <div
      class="c2"
    />
  </div>
</DocumentFragment>
`;

exports[`HomePage Snapshot do componente caso a API retorne algum erro 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c2 {
  font-size: 1.25em;
  opacity: 0;
  margin-top: 50px;
}

.c2.loading-error-enter {
  opacity: 0;
}

.c2.loading-error-enter-active {
  opacity: 1;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c2.loading-error-enter-done {
  opacity: 1;
}

400;700&display=swap'); .c0 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.spinner-enter {
  opacity: 0;
}

.c0.spinner-exit {
  opacity: 1;
}

.c0.spinner-enter-active {
  opacity: 1;
}

.c0.spinner-exit-active {
  opacity: 0;
}

.c0.spinner-enter-active,
.c0 .spinner-exit-active {
  -webkit-transition: opacity 1000ms;
  transition: opacity 1000ms;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        data-testid="home-spinner"
        style="width: 15px; height: 15px; border-radius: 100%; display: inline-block; position: relative; animation-fill-mode: both; animation: react-spinners-RotateLoader-rotate 2s 0s infinite cubic-bezier(0.7, -0.13, 0.22, 0.86); background-color: rgb(54, 215, 183);"
      >
        <span
          style="width: 15px; height: 15px; border-radius: 100%; opacity: 0.8; position: absolute; top: 0px; left: -28px; background-color: rgb(54, 215, 183);"
        />
        <span
          style="width: 15px; height: 15px; border-radius: 100%; opacity: 0.8; position: absolute; top: 0px; left: 28px; background-color: rgb(54, 215, 183);"
        />
      </span>
      <div
        class="c2"
        data-testid="spinner-error-text"
      >
        <p>
          Houston, we have a problem...
        </p>
        <small>
          Recarregue a página e tente novamente.
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomePage Snapshot do componente depois de iniciar o jogo e selecionar uma carta. 1`] = `
<DocumentFragment>
  .c9 {
  -webkit-animation: kcCFSJ;
  animation: kcCFSJ;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c9.close-modal {
  opacity: 0;
  visibility: collapse;
}

.c15 {
  z-index: 3;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(84,155,247,0.5);
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c10 {
  z-index: 4;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 600px;
  max-width: 100%;
  max-height: 100%;
  background-color: white;
  border-radius: 20px;
  -webkit-animation-delay: 0.75s;
  animation-delay: 0.75s;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 10px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 10px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  margin: 10px;
  padding: 5px;
}

.c14 {
  margin: 10px;
}

.c3 {
  width: 150px;
  height: 300px;
}

.c3:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
  -webkit-transition: scale 200ms;
  transition: scale 200ms;
}

.c4 {
  position: relative;
}

.c5 {
  background-image: url(https://dkw5ssdvaqf8l.cloudfront.net/static/psr/br/framework/yii/images/content/pt-br/product/tarot/marselha/back-blue-card.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  -webkit-animation: ddxGlr;
  animation: ddxGlr;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c16 {
  background-image: url(https://dkw5ssdvaqf8l.cloudfront.net/static/psr/br/framework/yii/images/content/pt-br/product/tarot/marselha/back-blue-card.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  -webkit-animation: fCDSQb;
  animation: fCDSQb;
  -webkit-animation-delay: 20ms;
  animation-delay: 20ms;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c18 {
  background-image: url(https://dkw5ssdvaqf8l.cloudfront.net/static/psr/br/framework/yii/images/content/pt-br/product/tarot/marselha/back-blue-card.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  -webkit-animation: fCDSQb;
  animation: fCDSQb;
  -webkit-animation-delay: 40ms;
  animation-delay: 40ms;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c7 {
  background-image: url(https://dkw5ssdvaqf8l.cloudfront.net/static/psr/br/framework/yii/images/content/pt-br/product/tarot/marselha/162x341/arcano3.jpg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  -webkit-animation: ddxGlr;
  animation: ddxGlr;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-animation-duration: 0.75s;
  animation-duration: 0.75s;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-perspective: 1000px;
  -moz-perspective: 1000px;
  -ms-perspective: 1000px;
  perspective: 1000px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.c8 {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-animation-duration: 0.75s;
  animation-duration: 0.75s;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-perspective: 1000px;
  -moz-perspective: 1000px;
  -ms-perspective: 1000px;
  perspective: 1000px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.c17 {
  cursor: pointer;
  z-index: 2;
}

.c0 {
  height: 100px;
  margin: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-size: 1.5em;
  font-weight: 700;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  row-gap: 20px;
  -webkit-column-gap: 5px;
  column-gap: 5px;
  margin-bottom: 20px;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <p
        class="c1"
      >
        Selecione uma carta:
      </p>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3 c4"
        data-testid="5-0"
      >
        <div
          class="c3 c5 c6"
          mode="both"
        />
        <div
          class="c3 c7 c8"
          direction="reverse"
          mode="both"
        />
      </div>
      <div
        data-testid="card-expanded"
      >
        <div
          class="c9 c10"
        >
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              <img
                alt="A IMPERATRIZ"
                data-nimg="1"
                decoding="async"
                height="300"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fdkw5ssdvaqf8l.cloudfront.net%2Fstatic%2Fpsr%2Fbr%2Fframework%2Fyii%2Fimages%2Fcontent%2Fpt-br%2Fproduct%2Ftarot%2Fmarselha%2F162x341%2Farcano3.jpg&w=384&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fdkw5ssdvaqf8l.cloudfront.net%2Fstatic%2Fpsr%2Fbr%2Fframework%2Fyii%2Fimages%2Fcontent%2Fpt-br%2Fproduct%2Ftarot%2Fmarselha%2F162x341%2Farcano3.jpg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fdkw5ssdvaqf8l.cloudfront.net%2Fstatic%2Fpsr%2Fbr%2Fframework%2Fyii%2Fimages%2Fcontent%2Fpt-br%2Fproduct%2Ftarot%2Fmarselha%2F162x341%2Farcano3.jpg&w=384&q=75 2x"
                style="color: transparent;"
                width="150"
              />
            </div>
            <div
              class="c13"
            >
              <h2>
                A IMPERATRIZ
              </h2>
              <p>
                Mussum Ipsum, cacilds vidis litro abertis. Viva Forevis aptent taciti sociosqu ad litora torquent. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.
              </p>
              <button
                class="c14"
              >
                Mais uma?
              </button>
            </div>
          </div>
        </div>
        <div
          class="c9 c15"
        />
      </div>
      <div
        class="c3 c16 c17"
        data-testid="4-1"
        mode="both"
      />
      <div
        class="c3 c18 c17"
        data-testid="4-2"
        mode="both"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomePage Snapshot do componente depois de iniciar o jogo. 1`] = `
<DocumentFragment>
  .c3 {
  width: 150px;
  height: 300px;
}

.c3:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
  -webkit-transition: scale 200ms;
  transition: scale 200ms;
}

.c4 {
  background-image: url(https://dkw5ssdvaqf8l.cloudfront.net/static/psr/br/framework/yii/images/content/pt-br/product/tarot/marselha/back-blue-card.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  -webkit-animation: fCDSQb;
  animation: fCDSQb;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c6 {
  background-image: url(https://dkw5ssdvaqf8l.cloudfront.net/static/psr/br/framework/yii/images/content/pt-br/product/tarot/marselha/back-blue-card.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  -webkit-animation: fCDSQb;
  animation: fCDSQb;
  -webkit-animation-delay: 20ms;
  animation-delay: 20ms;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c7 {
  background-image: url(https://dkw5ssdvaqf8l.cloudfront.net/static/psr/br/framework/yii/images/content/pt-br/product/tarot/marselha/back-blue-card.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  -webkit-animation: fCDSQb;
  animation: fCDSQb;
  -webkit-animation-delay: 40ms;
  animation-delay: 40ms;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c5 {
  cursor: pointer;
  z-index: 2;
}

.c0 {
  height: 100px;
  margin: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-size: 1.5em;
  font-weight: 700;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  row-gap: 20px;
  -webkit-column-gap: 5px;
  column-gap: 5px;
  margin-bottom: 20px;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <p
        class="c1"
      >
        Selecione uma carta:
      </p>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3 c4 c5"
        data-testid="4-0"
        mode="both"
      />
      <div
        class="c3 c6 c5"
        data-testid="4-1"
        mode="both"
      />
      <div
        class="c3 c7 c5"
        data-testid="4-2"
        mode="both"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomePage Snapshot do componente enquanto aguarda a resposta da API. 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c2 {
  font-size: 1.25em;
  opacity: 0;
  margin-top: 50px;
}

.c2.loading-error-enter {
  opacity: 0;
}

.c2.loading-error-enter-active {
  opacity: 1;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c2.loading-error-enter-done {
  opacity: 1;
}

400;700&display=swap'); .c0 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.spinner-enter {
  opacity: 0;
}

.c0.spinner-exit {
  opacity: 1;
}

.c0.spinner-enter-active {
  opacity: 1;
}

.c0.spinner-exit-active {
  opacity: 0;
}

.c0.spinner-enter-active,
.c0 .spinner-exit-active {
  -webkit-transition: opacity 1000ms;
  transition: opacity 1000ms;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        data-testid="home-spinner"
        style="width: 15px; height: 15px; border-radius: 100%; display: inline-block; position: relative; animation-fill-mode: both; animation: react-spinners-RotateLoader-rotate 2s 0s infinite cubic-bezier(0.7, -0.13, 0.22, 0.86); background-color: rgb(54, 215, 183);"
      >
        <span
          style="width: 15px; height: 15px; border-radius: 100%; opacity: 0.8; position: absolute; top: 0px; left: -28px; background-color: rgb(54, 215, 183);"
        />
        <span
          style="width: 15px; height: 15px; border-radius: 100%; opacity: 0.8; position: absolute; top: 0px; left: 28px; background-color: rgb(54, 215, 183);"
        />
      </span>
      <div
        class="c2"
        data-testid="spinner-error-text"
      >
        <p>
          Houston, we have a problem...
        </p>
        <small>
          Recarregue a página e tente novamente.
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
